# enginnering

./: .env.example  .gitignore  CHANGELOG.md  README.md  SESSION_HANDOFF_2026-01-25.md  pyproject.toml  pytest.ini
ai/: __init__.py  executor.py
ai/examples/: __init__.py  anthropic_integration.py  boolean_demo.py  material_demo.py  openai_integration.py  simple_scene.py
ai/schemas/: __init__.py  anthropic_tools.json  loader.py  openai_functions.json
api/: __init__.py  config.py  main.py  requirements.txt
api/clients/: __init__.py  base_client.py  blender_client.py  freecad_client.py
api/models/: __init__.py  boolean.py  common.py  export.py  materials.py  primitives.py  rendering.py  responses.py
api/routers/: __init__.py  blender.py  freecad.py  health.py
api/websocket/: __init__.py  handler.py
config/: api.yaml  blender.yaml  freecad.yaml
docs/: AI_INTEGRATION.md  API.md  SETUP.md
docs/man/: blender.man  freecad.man
plan/: BLENDER_FREECAD_API_RESEARCH.md  MASTER_PLAN.md  STAGE_2_PLAN.md  STAGE_4_PLAN.md  WSTODO_STAGE1.txt  WSTODO_STAGE2.txt  WSTODO_STAGE3.txt  WSTODO_STAGE4.txt
research/: STAGE_1_PLAN.md  STAGE_3_PLAN.md
scripts/: health_check.sh  start_all.sh  start_api.sh  stop_all.sh
src/blender/addon/: __init__.py  handlers.py  materials.py  primitives.py  rendering.py  scene.py  server.py
src/blender/scripts/: start_server.py
src/common/: __init__.py  exceptions.py  protocol.py
src/freecad/scripts/: start_server.py
src/freecad/server/: __init__.py  boolean.py  document.py  export.py  handlers.py  primitives.py  (+1 more)
tests/: conftest.py  requirements.txt  test_client.py  test_freecad_client.py
tests/integration/: conftest.py  test_full_workflow.py
tests/test_blender/: __init__.py  conftest.py  test_materials.py  test_primitives.py
tests/test_freecad/: __init__.py  conftest.py  test_boolean.py  test_primitives.py
